--- a/src/main/resources/templates/usr/member/store.html
+++ b/src/main/resources/templates/usr/member/store.html
@@ -180,7 +180,17 @@
                     <div class="card justify-center p-2 w-3/4 bg-[#EBEBEB] mt-7">
                         <div class="flex flex-col justify-center items-center mt-7 space-y-6">
                             <a href="#" class="flex flex-col items-center group px-1">
-                                <img th:src="@{${@photoService.getStoreCharacterPhoto('octopus.png')}}" alt="octopus" class="transition-all duration-300 transform group-hover:scale-110">
+                                <img th:src="@{${@photoService.getStoreCharacterPhoto('girl1.png')}}" alt="octopus" class="transition-all duration-300 transform group-hover:scale-110">
+                            </a>
+
+                            <h3 class="flex justify-center text-center text-xl font-bold">Open D-3 !!</h3>
+                        </div>
+                    </div>
+
+                    <div class="card justify-center p-2 w-3/4 bg-[#EBEBEB] mt-7">
+                        <div class="flex flex-col justify-center items-center mt-7 space-y-6">
+                            <a href="#" class="flex flex-col items-center group px-1">
+                                <img th:src="@{${@photoService.getStoreCharacterPhoto('boy1.png')}}" alt="octopus" class="transition-all duration-300 transform group-hover:scale-110">
                             </a>
 
                             <h3 class="flex justify-center text-center text-xl font-bold">Open D-3 !!</h3>
