--- a/src/main/resources/templates/usr/member/store.html
+++ b/src/main/resources/templates/usr/member/store.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<main layout:fragment="main" body class="bg-[#121212] w-full flex-col flex">
+<main layout:fragment="main" body class="bg-[#121212] w-full h-full flex-col flex">
 
     <script>
         function showBuy(itemId) {
